--- a/src/app.pcss
+++ b/src/app.pcss
@@ -1,4 +1,129 @@
-/* Write your global styles here, in PostCSS syntax */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+	*,
+	*::before,
+	*::after {
+		box-sizing: border-box;
+	}
+
+	body {
+		-webkit-font-smoothing: antialiased;
+		isolation: isolate;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		min-height: 100svh;
+	}
+
+	input,
+	button,
+	textarea,
+	select {
+		font: inherit;
+	}
+	p,
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		overflow-wrap: break-word;
+	}
+
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		text-wrap: balance;
+	}
+
+	p {
+		text-wrap: pretty;
+	}
+
+	:root {
+		--font-sans: system-ui, sans-serif;
+		--font-fancy: "Shantell Sans Variable";
+		--padding-inline: clamp(1rem, 5vw, 3rem);
+		--radius: 1rem;
+
+		/* @apply transition; */
+	}
+
+	/* light theme setup */
+	:root {
+		color-scheme: light;
+	}
+
+	/* dark theme setup */
+	[data-theme="dark"] {
+		color-scheme: dark;
+	}
+
+	body {
+		view-transition-name: body;
+	}
+
+	/* "normal" navigation */
+	@keyframes fade-out-to-left {
+		to {
+			opacity: 0%;
+			transform: translateX(-50%);
+		}
+	}
+
+	@keyframes slide-from-right {
+		from {
+			transform: translateX(100%);
+		}
+	}
+
+	/* "back" navigation */
+	@keyframes fade-out-to-right {
+		to {
+			opacity: 0%;
+			transform: translateX(50%);
+		}
+	}
+
+	@keyframes slide-from-left {
+		from {
+			transform: translateX(-100%);
+		}
+	}
+
+	@media (prefers-reduced-motion: no-preference) {
+		:root::view-transition-old(body) {
+			pointer-events: none;
+			animation: 300ms ease-out both fade-out-to-left;
+		}
+
+		:root::view-transition-new(body) {
+			pointer-events: none;
+			animation: 300ms ease-out both slide-from-right;
+		}
+
+		/* "back" navigation */
+		:root[data-back]::view-transition-old(body) {
+			pointer-events: none;
+			animation: 300ms ease-out both fade-out-to-right;
+		}
+
+		:root[data-back]::view-transition-new(body) {
+			pointer-events: none;
+			animation: 300ms ease-out both slide-from-left;
+		}
+
+		/* smooth scrolling */
+		:has(:target) {
+			scroll-behavior: smooth;
+			scroll-padding-top: 4rem;
+		}
+	}
+}
