--- a/src/app.pcss
+++ b/src/app.pcss
@@ -1,3 +1,6 @@
+@import "open-props/easings";
+@import "open-props/shadows";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -12,9 +15,9 @@
 	body {
 		-webkit-font-smoothing: antialiased;
 		isolation: isolate;
-		display: flex;
+		/* display: flex;
 		flex-direction: column;
-		justify-content: space-between;
+		justify-content: space-between; */
 		min-height: 100svh;
 	}
 
@@ -45,6 +48,10 @@
 
 	p {
 		text-wrap: pretty;
+	}
+
+	.contents {
+		isolation: isolate;
 	}
 
 	:root {
