--- a/src/app.pcss
+++ b/src/app.pcss
@@ -19,6 +19,12 @@
 		flex-direction: column;
 		justify-content: space-between; */
 		min-height: 100svh;
+
+		@apply flex flex-col;
+	}
+
+	main {
+		flex: 1;
 	}
 
 	input,
